style: Added embedded videos
videos to test the Multimedia is working, some styling and the correct media is needed

--- a/index.html
+++ b/index.html
@@ -39,41 +39,165 @@
 
     <!-- BODY -->
     <div class="container" id="main-container"> 
- 
+      <!-- SERVICES -->
       <div class="container-servicios">
-
         <div class="header-text" style="text-shadow: 2px 2px 4px rgba(188, 188, 188, 0.7);">Servicios</div>
-
         <ul class="first-level">
           <li>Captura fotogramétrica para la elaboración de:
             <ul class="second-level">
               <li>Mapas de Alta Definición</li>
-              <li>Modelos 3D de Superficies</li>
               <li>Generación de Curvas de Nivel de Superficies o Terreno</li>
+              <li>Modelos 3D de Superficies</li>
             </ul>
           </li>
           <li>Diseño de Áreas o Parcelas</li>
           <li>Toma de Imágenes y Videos</li>
           <li>Captura de Imágenes Panorámicas 360°</li>
         </ul>
-
       </div>
 
+      <!-- MULTIMEDIA -->
       <div class="container-multimedia">
+        <div class="header-text" >Multimedia</div>
 
-        <div class="header-text">Multimedia</div>
+        <div class="button">
+          <h2 class="video-toggle">Mapas / Ortofotos</h2>
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div>  
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div> 
+        </div>
 
-        <div class="card">1 this is some subtext under an ilustration or image</div>
-        <div class="card">2 this is some subtext under an ilustration or image</div>
-        <div class="card">3 this is some subtext under an ilustration or image</div>
-        <div class="card">4 this is some subtext under an ilustration or image</div>
-      
+        <div class="button">
+          <h2 class="video-toggle">Curvas de Nivel</h2>
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div>  
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div> 
+        </div>
+
+        <div class="button">
+          <h2 class="video-toggle">Modelos 3D</h2>
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div>  
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div> 
+        </div>
+
+        <div class="button">
+          <h2 class="video-toggle">Diseño de Parcelas</h2>
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div>  
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div> 
+        </div>
+
+        <div class="button">
+          <h2 class="video-toggle">Toma de Videos</h2>
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div>  
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div> 
+        </div>
+
+        <div class="button">
+          <h2 class="video-toggle">Imágenes Panorámicas</h2>
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div>  
+          <div class="video-container" style="display: none;">
+            <iframe
+              src="https://www.youtube.com/embed/-ll11ZgRWh0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div> 
+        </div>
+
       </div>
 
+      <!-- CONTACT -->
       <div class="container-call_to_action">
         <div class="header-text">TRABAJEMOS JUNTOS</div>
         <div class="secondary-text">Estamos a la espera de contribuir al éxito de sus proyectos.</div>
-
         <div class="container-contact">
           <a class="contact" href="https://wa.me/50689934608" target="_blank" rel="noopener noreferrer">
             <img src="resources/whatsapp-icon.png" alt="WhatsApp icon to chat" class="contact-icon">
@@ -93,11 +217,9 @@
               <span>Escribanos a<br><span style="font-size: 0.75em;">ealfaro.ing@gmail.com</span></span>
             </div>
           </a>
-        </div>
-
-
-        
+        </div>      
       </div>
+
     </div>
     <!-- BODY END -->
 
@@ -116,3 +238,22 @@
 
   </body>
 </html>
+
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const toggleButtons = document.querySelectorAll('.video-toggle');
+  
+    toggleButtons.forEach(button => {
+      button.addEventListener('click', function() {
+        // Find the closest parent '.button' to toggle its videos
+        const videoContainers = this.parentElement.querySelectorAll('.video-container');
+  
+        // Toggle the display of the video containers
+        videoContainers.forEach(container => {
+          container.style.display = container.style.display === 'none' ? 'block' : 'none';
+        });
+      });
+    });
+  });
+  </script>
